[package]
name = "protocheck"
version = "0.1.0"
edition = "2021"
authors = ["Onn Khairuddin"]
description = """
Proto vs JSON Validator
"""

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
prost-build = "0.13.5"
protobuf = "3.7.1"
protobuf-parse = "3.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
